[gd_scene load_steps=3 format=3 uid="uid://brdhhffb4o5v0"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu.gd" id="1_m8in8"]
[ext_resource type="Theme" uid="uid://yub5acxtpnjx" path="res://ui_theme.tres" id="1_tl55y"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tl55y")
script = ExtResource("1_m8in8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.102
offset_left = 710.0
offset_top = 300.0
offset_right = 1102.48
offset_bottom = 389.84
color = Color(1, 1, 1, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="FxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
tooltip_text = "Audio for FX from Towers, Enemies, and Crystal"
theme_override_constants/separation = -4
alignment = 1

[node name="FxLabel" type="Label" parent="ColorRect/VBoxContainer/FxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "FX"
horizontal_alignment = 1

[node name="FxVolume" type="HSlider" parent="ColorRect/VBoxContainer/FxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="MusicContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
tooltip_text = "Audio for music in level and menus"
theme_override_constants/separation = -4

[node name="MusicLabel" type="Label" parent="ColorRect/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "MUSIC"
horizontal_alignment = 1

[node name="MusicVolume" type="HSlider" parent="ColorRect/VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 885.0
offset_top = 550.0
offset_right = 1035.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 48
text = "RESUME"

[connection signal="value_changed" from="ColorRect/VBoxContainer/FxContainer/FxVolume" to="." method="_on_fx_volume_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/MusicContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
